# nrp-scraper

./: LICENSE  config.py  flake.nix  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: format.yml  test.yml
constants/: sources.py
tests/: test_create_json_file.py  test_read_rss.py
tests/fixtures/: prothom_alo.xml
tests/sources/prothomalo_en/: test_create_json_file.py  test_parse.py
tests/sources/prothomalo_en/fixtures/: prothomalo_en.xml
util/: Scraper.py  create_json_file.py  fetch_rss.py  read_rss.py
util/sources/prothomalo_en/: ProthomAloEntry.py  parse.py
util/types/: Entry.py  Language.py  Source.py
