[project]
name = "nrp-scraper"
dynamic = ["version"]
requires-python = ">=3.14"

[tool.poetry]
version = "1.0.0"
packages = [{ include = "main.py" }]

[tool.poetry.scripts]
main = "main:main"

[tool.poetry.dependencies]
feedparser = "^6.0.12"

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)", "ruff (>=0.15.11,<0.16.0)"]

[tool.ruff]
line-length = 88
indent-width = 2
exclude = [".venv", "artifacts", "dist", "__pycache__", ".vscode", "fixtures"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
